# webassembly-rust-tailwinds-trunk

./: .gitignore  Cargo.toml  README.md
.tailwindcss/4.0.6/: build.mjs  package.json  postcss.config.mjs  tailwind.config.mjs  tailwind.css
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml  Trunk.toml  build.mjs  index.html  package.json  postcss.config.mjs  tailwind.build.mjs  tailwind.config.mjs
frontend/scripts/: build.mjs
frontend/src/: app.rs  lib.rs  main.rs
frontend/style/: main.scss
