[workspace]
members = [
    "backend",
    "frontend"
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]

[workspace.dependencies]
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
axum = "0.8.1"
leptos = { version = "0.7.7" }
leptos_axum = { version = "0.7.7" }
leptos_meta = { version = "0.7.7" }
leptos_router = { version = "0.7.7" }
cfg-if = "1.0.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs", "cors"] }
http = "1.2.0"
